<resources>
    <string name="app_name">Data Acquisition</string>
    <string name="calibrate">Calibrate Sensors</string>
    <string name="collect_data">Collect Data</string>
    <string name="export_data">Export Data</string>
    <string name="pitch_gyro_default">Pitch: 0.00°</string>
    <string name="yaw_gyro_default">Yaw: 0.00°</string>
    <string name="roll_gyro_default">Roll: 0.00°</string>
    <string name="z_accel_default">Z: 0.00 m/s²</string>
    <string name="y_accel_default">Y: 0.00 m/s²</string>
    <string name="x_accel_default">X: 0.00 m/s²</string>
    <string name="timestamp">timestamp</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="start_time">start_time</string>
    <string name="end_time">end_time</string>
    <string name="acceleration_table_name">Accel_Data</string>
    <string name="create_accel_data_table">CREATE TABLE Accel_Data(timestamp INTEGER PRIMARY KEY, x DOUBLE, y DOUBLE, z DOUBLE)</string>
    <string name="create_gyro_data_table">CREATE TABLE Gyro_Data(timestamp INTEGER PRIMARY KEY, pitch DOUBLE, roll DOUBLE, yaw DOUBLE)</string>
    <string name="timeframe_table_name">Timeframe</string>
    <string name="create_timeframe_table">CREATE TABLE Timeframe(start_time INTEGER PRIMARY KEY, end_time UNSIGNED BIGINT)</string>
    <string name="drop_accel_data_table">DROP TABLE IF EXISTS Accel_Data</string>
    <string name="drop_gyro_data_table">DROP TABLE IF EXISTS Gyro_Data</string>
    <string name="drop_timeframe_table">DROP TABLE IF EXISTS Timeframe</string>
    <string name="pitch">pitch</string>
    <string name="roll">roll</string>
    <string name="yaw">yaw</string>
    <string name="gyroscope_table_name">Gyro_Data</string>
    <string name="delete_accel_data">DELETE FROM Accel_Data</string>
    <string name="delete_gyro_data">DELETE FROM Gyro_Data</string>
    <string name="delete_timeframe">DELETE FROM Timeframe</string>
    <string name="stop_collection">Stop Collection</string>
    <string name="x_format">X: %f m/s²</string>
    <string name="y_format">Y: %f m/s²</string>
    <string name="z_format">Z: %f m/s²</string>
    <string name="pitch_format">Pitch: %f°</string>
    <string name="roll_format">Roll: %f°</string>
    <string name="yaw_format">Yaw: %f°</string>
    <string name="db_name">MotionCollectionDB</string>
    <string name="timeframe_select_query">Timeframe.start_time &gt;= ? AND Timeframe.end_time &lt;= ?</string>
    <string name="accel_select_query">timestamp &gt;= ? AND timestamp &lt;= ?</string>
    <string name="all_columns">*</string>
    <string name="gyro_select_query">timestamp &gt;= ? AND timestamp &lt;= ?</string>
    <string name="calibration_dialog_title">Calibration</string>
    <string name="cancel">Cancel</string>
    <string name="time_remaining" formatted="false">Stage %d: %d seconds</string>
    <string name="calibration_complete_in">Calibration will be \ncompleted in:</string>
    <string name="new_session">New Session</string>
    <string name="add_to_session">Add to Session</string>
    <string name="x_threshold">x_threshold</string>
    <string name="y_threshold">y_threshold</string>
    <string name="z_threshold">z_threshold</string>
    <string name="roll_threshold">roll_threshold</string>
    <string name="pitch_threshold">pitch_threshold</string>
    <string name="yaw_threshold">yaw_threshold</string>
    <string name="please_secure_device">Begin by aligning the seek bar with where the front of the vehicle is located. Please secure the device where desired within the vehicle, and turn the engine on before calibration</string>
    <string name="calibration_prefs">Calibration</string>
    <string name="select_all_timeframe">SELECT * FROM Timeframe</string>
    <string name="start_time_label">Start Time: %s</string>
    <string name="end_time_label">End Time: %s</string>
    <string name="session_desc_format">Description: %s</string>
</resources>
