<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rose_hulman.nswccrane.dataacquisition.MainActivity">

    <Button
        android:id="@+id/calibration_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/calibrate" />

    <LinearLayout
        android:id="@+id/collection_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calibration_button"
        android:layout_marginTop="28dp">

        <EditText
            android:id="@+id/record_time_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Minutes to record\n(Empty = 0 = Indefinite)"
            android:inputType="number"
            android:textSize="12sp" />


        <Button
            android:id="@+id/collection_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collect_data" />
    </LinearLayout>

    <Button
        android:id="@+id/export_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/collection_row"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/export_data" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/export_button"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/x_accel_text_view"
                android:layout_weight="1"
                android:text="@string/x_accel_default" />

            <TextView
                android:id="@+id/pitch_gyro_text_view"
                android:layout_weight="1"
                android:text="@string/pitch_gyro_default" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/y_accel_text_view"
                android:layout_weight="1"
                android:text="@string/y_accel_default" />

            <TextView
                android:id="@+id/yaw_gyro_text_view"
                android:layout_weight="1"
                android:text="@string/yaw_gyro_default" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <TextView
                android:id="@+id/z_accel_text_view"
                android:layout_weight="1"
                android:text="@string/z_accel_default" />

            <TextView
                android:id="@+id/roll_gyro_text_view"
                android:layout_weight="1"
                android:text="@string/roll_gyro_default" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
