<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_secure_device"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <Button
            android:id="@+id/calibrate_cancel_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/calibrate_accept_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calibrate"
            />
    </LinearLayout>


</LinearLayout>